# MatrixBuddy

./: .gitignore  MatrixBuddy.xcodeproj  readme.txt
MatrixBuddy.xcodeproj/: project.pbxproj
code/MatrixBuddy/: CMakeLists.txt
code/MatrixBuddy/res/: MatrixBuddyChangelog.txt  MatrixBuddyStrings_deu.h  MatrixBuddyStrings_eng.h  MatrixBuddyStrings_fra.h  MatrixBuddyStrings_jpn.h  MatrixBuddyStrings_spa.h  MatrixBuddyStrings_tlh.h  MatrixBuddyStrings_zho.h
code/MatrixBuddy/res/mac/: MainMenu.xib  Matrix Buddy-Info.plist
code/MatrixBuddy/res/mac/en.lproj/: InfoPlist.strings  MainMenu.xib
code/MatrixBuddy/src/: MATAboutController.c  MATAboutController.h  MATApplication.c  MATApplication.h  MATApplication.m  MATCommon.h  MATCommonC.h  MATComputationView.h  MATInputMatrix.c  MATInputMatrix.h  MATNSApplication.h  MATNSApplication.m  MATPreferences.c  MATPreferences.h  MATPreferencesController.c  MATPreferencesController.h  MATTextField.h  MATTextField.m  MATTranslations.c  MATTranslations.h  MATTypes.h  MATValueView.h  MATValueView.m  MATValueViewASDF.c  MATValueViewASDF.h  MATView.c  MATView.h  MATWindowController.c  MATWindowController.h  MATWindowController.m  MATWindowControllerASDF.c  MATWindowControllerASDF.h  MatrixBuddyPreferences.c  MatrixBuddyPreferences.h  MatrixBuddyTranslations.c  MatrixBuddyTranslations.h  main.c  main.m
code/MatrixBuddy/src/ComputationControllers/: MATBaseController.c  MATBaseController.h  MATDiagS.c  MATDiagS.h  MATDiagS.m  MATDiagV.m  MATInvertM.h  MATInvertM.m  MATLengthV.h  MATLengthV.m  MATMAddM.c  MATMDiagS.c  MATMDiagV.c  MATMDivCompM.c  MATMDivCompM.h  MATMDivCompM.m  MATMDivCompV.c  MATMDivCompV.h  MATMDivCompV.m  MATMDivS.c  MATMDivS.h  MATMDivS.m  MATMInvert.c  MATMMulCompM.c  MATMMulCompM.h  MATMMulCompM.m  MATMMulCompV.c  MATMMulCompV.h  MATMMulCompV.m  MATMMulM.c  MATMMulM.h  MATMMulS.c  MATMMulS.h  MATMMulS.m  MATMMulV.c  MATMMulV.h  MATMNeg.c  MATMSubM.c  MATMTranspose.c  MATMirrorV.m  (+33 more)
code/MatrixBuddy/src/Views/: MATView.c  MATView.h  MATViewM22.h  MATViewM22.m  MATViewM33.m  MATViewM33ASDF.c  MATViewM33ASDF.h  MATViewM44.h  MATViewM44.m  MATViewS.m  MATViewSASDF.c  MATViewSASDF.h  MATViewV2.m  MATViewV3.h  MATViewV3.m  MATViewV4.m
code/WinInstaller/: Package.StoreAssociation.xml  Package.appxmanifest  WinInstaller.wapproj
doc/: MatrixBuddyChangelog.txt
proj/MatrixBuddyXCode.xcodeproj/: project.pbxproj
proj/Products/Debug/Matrix Buddy.app/Contents/: Info.plist
proj/Products/Debug/Matrix Buddy.app/Contents/MacOS/: Matrix Buddy
proj/Products/Debug/Matrix Buddy.app/Contents/Resources/: ManderApp.vcxproj  MatrixBuddyChangelog.txt
proj/Products/Debug/Matrix Buddy.app/Contents/_CodeSignature/: CodeResources
proj/Products/Release/Matrix Buddy.app/Contents/: Info.plist
proj/Products/Release/Matrix Buddy.app/Contents/MacOS/: Matrix Buddy
proj/Products/Release/Matrix Buddy.app/Contents/Resources/: MatrixBuddy.icns
proj/Products/Release/Matrix Buddy.app/Contents/Resources/en.lproj/: InfoPlist.strings  MainMenu.nib
proj/Products/Release/Matrix Buddy.app/Contents/_CodeSignature/: CodeResources
proj/XCode/MatrixBuddy.xcodeproj/: project.pbxproj
res/: Info.plist  MatrixBuddyChangelog.txt  MatrixBuddyLogo.psd  MatrixBuddyStrings_eng.h
res/en.lproj/: Localizable.strings  MainMenu.xib
res/en.lproj/help/: index.html
src/: HelpViewer.h  HelpViewer.m  MATApplication.h  MATApplication.m  MATCommon.h  MATComputationView.m  MATTextField.h  MATTextField.m  MATValueView.h  MATValueView.m  MATWindowController.h  MATWindowController.m  MandConfiguration.h  MatrixBuddyPreferences.c  MatrixBuddyPreferences.h  MatrixBuddyTranslations.c  MatrixBuddyTranslations.h  main.m
src/ComputationControllers/: MATDiagS.m  MATDiagV.h  MATDiagV.m  MATInvertM.m  MATLengthV.m  MATMAddM.h  MATMAddM.m  MATMDivCompM.m  MATMDivCompV.h  MATMDivCompV.m  MATMDivS.m  MATMMulCompM.h  MATMMulCompM.m  MATMMulCompV.m  MATMMulM.m  MATMMulS.h  MATMMulS.m  MATMMulV.h  MATMMulV.m  MATMSubM.h  MATMSubM.m  MATMirrorV.h  MATMirrorV.m  MATNegM.h  MATNegM.m  MATNegV.m  MATNormalizeV.h  MATNormalizeV.m  MATOrthogonalizeV.h  MATOrthogonalizeV.m  MATTransposeM.m  MATVAddV.h  MATVAddV.m  MATVCrossV.m  MATVDivCompV.h  MATVDivCompV.m  MATVDivS.m  MATVDotV.m  MATVMulCompV.m  MATVMulS.m  (+2 more)
src/Views/: MATViewM22.m  MATViewM33.h  MATViewM33.m  MATViewM44.m  MATViewS.h  MATViewS.m  MATViewV2.h  MATViewV2.m  MATViewV3.m  MATViewV4.h  MATViewV4.m
stuff/: TextEdit Document  matrixbuddyspeech.txt  publishtextD.txt  publishtextE.txt
stuff/orig/: symbols.karo
stuff/orig/photoshop/: matrices.txt
stuff/orig/txt/: matrixbuddyspeech.txt
